--- a/_posts/2022-04-22-formerly.md
+++ b/_posts/2022-04-22-formerly.md
@@ -5,18 +5,19 @@ title: Formerly
 
 ### Freelancer
 
-*Taught SAT, economics, and math to high school students
-*Created Google Ads, Facebook Ads, and Direct Mail campaigns for local startups
-*Raised over $200,000 in seed funding for local startups
-*Served over 175 meals a day at local Chinese food franchise
-*Canvassed voters for Andrew Yang's mayoral campaign
+*   Taught SAT, economics, and math to high school students
+*   Created Google Ads, Facebook Ads, and Direct Mail campaigns for local startups
+*   Raised over $200,000 in seed funding for local startups
+*   Served over 175 meals a day at local Chinese food franchise
+*   Canvassed voters for Andrew Yang's mayoral campaign
 
 ### JP Morgan
 
-*Created interest rate hedging models for mortgage portfolios
-*Learned how to make excel spreadsheets and powerpoint presentations
+*   Created interest rate hedging models for mortgage portfolios
+*   Learned how to make excel spreadsheets and powerpoint presentations
 
 ### Baruch College
 
-*Studied fundamentals of accounting and finance
-*Completed undergraduate degree 2020
+*   Studied fundamentals of accounting and finance
+*   Studied abroad in Osaka for one semester
+*   Completed undergraduate degree with honors in 2020
