change jpm experience

--- a/_posts/2022-04-20-formerly.md
+++ b/_posts/2022-04-20-formerly.md
@@ -14,7 +14,7 @@ title: Formerly
 ### JP Morgan
 
 *   Created interest rate hedging models for mortgage portfolios
-*   Learned how to make excel spreadsheets and powerpoint presentations
+*   Built Excel models and crafted refined slide decks to transmit key strategic goals to upper management
 
 ### Baruch College
 
